--- a/index.html
+++ b/index.html
@@ -1,311 +1,159 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CROSSROADS</title>
+<title>[CROSS/ROADS] – perpetual flyer wall</title>
 <style>
-/* Base reset - embrace browser defaults like xerox embraced machine limits */
-*{margin:0;padding:0;box-sizing:border-box;}
+/* -------------------------------- Base reset */
+*{margin:0;padding:0;box-sizing:border-box}
+html,body{height:100%;background:#0e0d0b;color:#f4f1e8;font-family:monospace;cursor:crosshair;overflow-x:hidden}
 
-body{
-    background:#1a1815;
-    overflow-x:hidden;
-    font-family:monospace;
-    cursor:crosshair;
-    color:#f4f1e8;
-}
-
-/* The site degrades with each visit - like photocopies of photocopies */
+/* ---------- Global CSS custom props controlling decay */
 :root{
-    --generation:1;
-    --contrast:100%;
-    --noise:0.02;
-    --drift:0deg;
-    --bleed:0px;
+ --decay:0;
+ --blur:0px; --sat:1; --invert:0; --skew:0deg; --scan:0px
+}
+body{
+ filter:blur(var(--blur)) saturate(var(--sat)) invert(var(--invert)) hue-rotate(var(--skew));
 }
 
-/* Canvas for generative flyer system */
-#flyer-generator{
-    position:fixed;top:0;left:0;z-index:1;pointer-events:none;
-    mix-blend-mode:screen;opacity:0.3;
+/* -------------------------------- Layers */
+#xeroxShader,#opticSpiral{position:fixed;inset:0;pointer-events:none;z-index:0}
+#opticSpiral{
+ background:repeating-conic-gradient(#000 0deg 2deg,#111 2deg 4deg,#0e0d0b 4deg 8deg);
+ animation:spin 40s linear infinite;opacity:.05
+}
+@keyframes spin{to{transform:rotate(360deg)}}
+
+#content{position:relative;z-index:1;padding:8vmin 4vmin;min-height:200vh}
+
+/* ---------- Graffiti burst hero */
+#vitaminBurst{position:relative;height:55vh;display:flex;align-items:center;justify-content:center;overflow:hidden}
+#vitaminBurst h1{font-size:clamp(2.5rem,8vw,9rem);text-transform:uppercase;mix-blend-mode:exclusion}
+.burstRay{
+ position:absolute;top:50%;left:50%;width:120vmax;height:4vmax;
+ background:linear-gradient(90deg,transparent,rgba(255,90,0,.9) 30%,transparent 70%);
+ transform-origin:0 50%;
+ mix-blend-mode:screen;
 }
 
-/* Main content emerges from noise */
-.venue-data{
-    position:relative;z-index:2;min-height:100vh;padding:20px;
-    filter:contrast(var(--contrast)) blur(var(--bleed));
-    transform:rotate(var(--drift));
+/* ---------- Dynamic scraps */
+.scrap{
+ position:absolute;padding:1.2rem 1.4rem;font-size:1.1rem;line-height:1.25;
+ background:#fdfbf6;border:1px solid rgba(0,0,0,.3);
+ filter:grayscale(.2) contrast(.9) brightness(.95);
+ box-shadow:0 8px 16px rgba(0,0,0,.6),inset 0 0 8px rgba(0,0,0,.4);
+ mask:var(--mask);
+ transform:rotate(var(--rot)) translateZ(0);pointer-events:none;
+ user-select:none;
 }
-
-/* Tonight's billboard */
-.tonight-billboard{
-    background:linear-gradient(180deg,#000 0%,#111 100%);
-    border:3px solid #f4f1e8;padding:30px;margin:20px 0 40px;
-    position:relative;overflow:hidden;
-}
-.tonight-billboard::before{
-    content:'';position:absolute;inset:0;
-    background:repeating-linear-gradient(
-        90deg,transparent,transparent 10px,
-        rgba(244,241,232,0.02) 10px,rgba(244,241,232,0.02) 11px);
-}
-.tonight-billboard h2{
-    font-size:2em;margin-bottom:20px;text-align:center;letter-spacing:0.1em;
-}
-.current-show{
-    display:flex;justify-content:space-between;align-items:center;
-    padding:10px 0;border-bottom:1px dashed rgba(244,241,232,0.3);
-}
-.current-show:last-child{border-bottom:none;}
-
-/* default sticky-note look (overridden below) */
-.sticky-note{
-    background:linear-gradient(135deg,#f4e19c 0%,#e8d589 40%,#d9c574 70%,#c8b35f 100%);
-    color:#1a1815;padding:20px;margin:15px;
-    box-shadow:2px 2px 10px rgba(0,0,0,0.5);
-    transform:rotate(-1deg);position:relative;max-width:300px;display:inline-block;vertical-align:top;
-}
-.sticky-note::before{content:'';position:absolute;inset:0;background:
-    radial-gradient(circle at 20% 80%,rgba(139,69,19,0.1) 0%,transparent 50%),
-    radial-gradient(circle at 80% 20%,rgba(160,82,45,0.08) 0%,transparent 50%),
-    radial-gradient(circle at 50% 50%,rgba(139,90,43,0.05) 0%,transparent 70%);pointer-events:none;}
-.sticky-note::after{content:'';position:absolute;top:-10px;left:50%;transform:translateX(-50%);
-    width:60px;height:20px;background:rgba(255,255,255,0.3);opacity:0.7;box-shadow:0 1px 3px rgba(0,0,0,0.2);}
-
-/* Coffee stains */
-.stain{position:absolute;width:60px;height:60px;border-radius:50%;
-    background:radial-gradient(circle,rgba(139,69,19,0.1) 0%,transparent 70%);pointer-events:none;}
-
-/* Hand‑drawn text simulation */
-.hand-drawn{filter:url(#roughPaper);font-size:2.5em;font-weight:bold;letter-spacing:-.05em;margin-bottom:20px;}
-
-/* Photocopier banding effect */
-.banding::before{content:'';position:absolute;inset:0;background:
-    repeating-linear-gradient(to bottom,transparent,transparent 3px,
-    rgba(255,255,255,0.02) 3px,rgba(255,255,255,0.02) 4px);pointer-events:none;animation:feedError 7s infinite;}
-@keyframes feedError{0%,95%{transform:translateX(0);}96%{transform:translateX(-2px) skewY(.5deg);}97%{transform:translateX(1px);}100%{transform:translateX(0);}}
-
-/* Gibberish text */
-.gibberish-text{font-size:1.2em;font-weight:bold;letter-spacing:-.05em;}
-
-/* Kaleidoscopic background */
-.kaleidoscope{position:fixed;top:50%;left:50%;width:200vmax;height:200vmax;
-    transform:translate(-50%,-50%);opacity:.05;z-index:0;}
-.kaleidoscope-layer{position:absolute;width:100%;height:100%;
-    background:conic-gradient(from var(--angle) at 50% 50%,transparent 0deg,#f4f1e8 5deg,
-    transparent 10deg,transparent 20deg,#f4f1e8 25deg,transparent 30deg);
-    animation:kaleidoscope-spin var(--speed) linear infinite;}
-@keyframes kaleidoscope-spin{from{transform:rotate(0deg);}to{transform:rotate(360deg);}}
-
-/* Anti-compliance: interactivity degrades */
-body.degraded-1{--contrast:110%;--noise:.05;}
-body.degraded-2{--contrast:130%;--noise:.1;--drift:.5deg;}
-body.degraded-3{--contrast:150%;--noise:.2;--drift:1deg;--bleed:.5px;}
-body.degraded-4{--contrast:200%;--noise:.4;--drift:2deg;--bleed:1px;}
-body.degraded-5{filter:invert(1);--drift:-3deg;--bleed:2px;}
-
-/* Emergency broadcast system */
-.system-message{position:fixed;bottom:20px;right:20px;background:red;color:white;
-    padding:10px;font-family:monospace;display:none;animation:glitch .1s infinite;z-index:1000;}
-@keyframes glitch{0%{transform:translateX(0);}33%{transform:translateX(-2px);}66%{transform:translateX(2px);}100%{transform:translateX(0);}}
-
-/* Venue rules section */
-.venue-rules{background:rgba(0,0,0,.8);border:2px solid #f4f1e8;padding:20px;margin:30px 0;max-width:600px;}
-.venue-rules h3{margin-bottom:15px;font-size:1.5em;}
-.venue-rules li{list-style:none;padding:5px 0;}
-.venue-rules li::before{content:"→ ";color:#f4f1e8;}
-
-/* Past shows section */
-.past-shows{margin-top:50px;}
-.past-shows h3{font-size:1.8em;margin-bottom:20px;}
-
-/* Browser as photocopier */
-@media print{
-    body{filter:contrast(300%) brightness(.8);}
-    .no-print{display:none;}
-}
-
-/* ─────────────────────────────── */
-/* WORN‑FLYER OVERHAUL (OVERRIDES) */
-/* ─────────────────────────────── */
-.sticky-note{
-    background:linear-gradient(180deg,#fdfbf6 0%,#f1eedc 100%);
-    border:1px solid rgba(0,0,0,.25);
-    padding:28px 26px 40px;
-    margin:25px 20px;
-    max-width:340px;
-    transform:rotate(calc(-3deg + 6deg*var(--rand,1)));
-    box-shadow:0 10px 20px rgba(0,0,0,.65),inset 0 0 6px rgba(0,0,0,.25);
-    filter:grayscale(.18) contrast(.9) brightness(.96);
-    position:relative;overflow:visible;
-}
-.sticky-note::before{
-    content:'';position:absolute;inset:0;
-    background:
-        repeating-linear-gradient(90deg,rgba(0,0,0,.015) 0 3px,transparent 3px 7px),
-        repeating-linear-gradient(0deg ,rgba(0,0,0,.02) 0 4px,transparent 4px 8px);
-    pointer-events:none;mix-blend-mode:multiply;
-}
-.sticky-note::after{
-    content:'';position:absolute;left:0;right:0;bottom:-12px;height:14px;background:#f1eedc;
-    mask:repeating-linear-gradient(90deg,transparent 0 14px,black 14px 23px);
-    box-shadow:0 4px 6px rgba(0,0,0,.45);
-}
-
-/* Masking‑tape corners */
-.tape{
-    position:absolute;width:70px;height:22px;background:rgba(255,255,220,.6);
-    box-shadow:0 2px 4px rgba(0,0,0,.25);pointer-events:none;
-}
-.tl{top:-14px;left:-18px;transform:rotate(-6deg);}
-.tr{top:-14px;right:-18px;transform:rotate(5deg);}
+.scrap:after{/* masking‑tape */content:'';position:absolute;top:-14px;left:50%;width:68px;height:22px;background:rgba(255,255,220,.65);box-shadow:0 2px 4px rgba(0,0,0,.4);transform:translateX(-50%) rotate(var(--trot))}
+@property --scan{syntax:"<length>";initial-value:0;inherits:false}
+@keyframes scanShift{to{transform:translateX(var(--scan))}}
+/* -------------------------------- Decay stages computed in JS */
 </style>
 </head>
 <body>
 
-<!-- SVG Filters for hand‑drawn effect -->
-<svg style="display:none">
-    <filter id="roughPaper">
-        <feTurbulence type="fractalNoise" baseFrequency="0.02" numOctaves="5" result="noise"/>
-        <feDisplacementMap in="SourceGraphic" in2="noise" scale="1"/>
-    </filter>
-</svg>
+<canvas id="xeroxShader"></canvas>
+<div id="opticSpiral"></div>
 
-<!-- Kaleidoscopic background -->
-<div class="kaleidoscope">
-    <div class="kaleidoscope-layer" style="--angle:0deg;--speed:60s;"></div>
-    <div class="kaleidoscope-layer" style="--angle:45deg;--speed:90s;transform:scale(.8);"></div>
-    <div class="kaleidoscope-layer" style="--angle:90deg;--speed:120s;transform:scale(.6);"></div>
-    <div class="kaleidoscope-layer" style="--angle:135deg;--speed:45s;transform:scale(1.2);"></div>
+<div id="content">
+  <section id="vitaminBurst"><h1>Vitamin D / Crossroads</h1></section>
+  <!-- collage container -->
+  <section id="wall" style="position:relative;height:140vh"></section>
 </div>
-
-<!-- Dynamic flyer canvas -->
-<canvas id="flyer-generator"></canvas>
-
-<!-- Main venue interface -->
-<div class="venue-data banding">
-    <div class="deteriorate">
-        <h1 class="hand-drawn">[CROSS/ROADS]</h1>
-
-        <!-- Tonight's show billboard -->
-        <div class="tonight-billboard">
-            <h2>UPCOMING SHOW: 12/14</h2>
-            <div class="current-show"><span class="gibberish-text">▓▓█░ ░▓██</span><span>7:30PM</span></div>
-            <div class="current-show"><span class="gibberish-text">██▓░ ▓▓░█</span><span>8:15PM</span></div>
-            <div class="current-show"><span class="gibberish-text">░██▓ █░▓█</span><span>9:00PM</span></div>
-            <div class="current-show"><span class="gibberish-text">▓░██ ░▓▓█</span><span>9:45PM</span></div>
-        </div>
-
-        <!-- Venue rules -->
-        <div class="venue-rules">
-            <h3>HOUSE RULES</h3>
-            <ul>
-                <li>18+ ONLY - MUST SHOW ID</li>
-                <li>MESSAGE @CROSSROADS.DENTON ON INSTAGRAM FOR ADDRESS</li>
-                <li>SOMEONE FROM ONE OF THE BANDS MUST BE FOLLOWING YOU TO GET IN</li>
-                <li>NO COVER CHARGE</li>
-                <li>RESPECT THE SPACE</li>
-            </ul>
-        </div>
-
-        <!-- Past shows section -->
-        <div class="past-shows">
-            <h3>ARCHIVE</h3>
-            <div id="past-shows-container"></div>
-        </div>
-    </div>
-</div>
-
-<!-- System messages -->
-<div class="system-message" id="warning">DEGRADATION IMMINENT</div>
 
 <script>
-// The site actively resists being used
-let degradationLevel=0,clickCount=0;
-document.addEventListener('click',()=>{
-    clickCount++;
-    if(clickCount%5===0&&degradationLevel<5){
-        degradationLevel++;
-        document.body.className=`degraded-${degradationLevel}`;
-        if(degradationLevel===3){
-            const w=document.getElementById('warning');
-            w.style.display='block';
-            setTimeout(()=>w.style.display='none',2000);
-        }
-    }
+// ---------- click‑driven decay
+let clicks=0;
+addEventListener('click',()=>{
+  clicks++;const r=document.documentElement;
+  if(clicks%4===0){
+    r.style.setProperty('--decay',clicks/4);
+    r.style.setProperty('--blur',`${Math.min(clicks,10)}px`);
+    r.style.setProperty('--sat',`${Math.max(.4,1-clicks*0.05)}`);
+    r.style.setProperty('--invert',clicks>12?.8:clicks>8?.4:0);
+    r.style.setProperty('--skew',`${Math.min(clicks*3,30)}deg`);
+  }
 });
 
-// Photocopier canvas effects
-const canvas=document.getElementById('flyer-generator'),ctx=canvas.getContext('2d');
-function sizeCanvas(){canvas.width=innerWidth;canvas.height=innerHeight;}sizeCanvas();
-function generateArtifacts(){
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-    for(let x=0;x<canvas.width;x+=4){
-        for(let y=0;y<canvas.height;y+=4){
-            if(Math.random()>.98){
-                ctx.fillStyle=`rgba(244,241,232,${Math.random()*0.1})`;
-                ctx.fillRect(x,y,2,2);
-            }
-        }
-    }
-    const g=ctx.createRadialGradient(canvas.width/2,canvas.height/2,canvas.width/3,
-                                     canvas.width/2,canvas.height/2,canvas.width);
-    g.addColorStop(0,'rgba(0,0,0,0)');g.addColorStop(1,'rgba(0,0,0,0.2)');
-    ctx.fillStyle=g;ctx.fillRect(0,0,canvas.width,canvas.height);
-}
-generateArtifacts();
-
-// Gibberish generator
-const chars='░▓█▒▀▄■□▪▫';
-const genGib=()=>Array.from({length:3+Math.floor(Math.random()*3)},()=>chars[Math.floor(Math.random()*chars.length)]).join('')+' '+chars[Math.floor(Math.random()*chars.length)].repeat(4);
-
-// Generate past shows
-const months=['01','02','03','04','05','06','07','08','09','10','11','12'];
-const container=document.getElementById('past-shows-container');
-for(let i=0;i<8;i++){
-    const note=document.createElement('div');
-    note.className='sticky-note';
-    note.style.setProperty('--rand',Math.random());              // random tilt
-    // stains
-    if(Math.random()>.7){
-        const s=document.createElement('div');
-        s.className='stain';
-        s.style.top=`${Math.random()*50}%`;
-        s.style.left=`${Math.random()*50}%`;
-        note.appendChild(s);
-    }
-    const m=months[Math.floor(Math.random()*months.length)];
-    const d=String(Math.floor(Math.random()*28+1)).padStart(2,'0');
-    note.innerHTML+=`
-        <div style="font-weight:bold;margin-bottom:10px;font-size:1.2em;">${m}/${d}</div>
-        <div style="margin-bottom:5px;">${genGib()}</div>
-        <div style="margin-bottom:5px;">${genGib()}</div>
-        <div style="margin-bottom:5px;">${genGib()}</div>
-        <div style="margin-top:15px;font-size:1.1em;color:#8b4513;"><strong>EXPIRED</strong></div>
-    `;
-    note.innerHTML+=`<span class="tape tl"></span><span class="tape tr"></span>`; // masking tape
-    container.appendChild(note);
+// ---------- graffiti burst rays
+const burst=document.getElementById('vitaminBurst');
+for(let i=0;i<32;i++){
+  const e=document.createElement('div');
+  e.className='burstRay';
+  e.style.transform=`translate(-50%,-50%) rotate(${Math.random()*360}deg) scaleX(${.4+Math.random()*1.2})`;
+  e.style.opacity=0.45+Math.random()*0.35;
+  burst.appendChild(e);
 }
 
-// Remember degradation
-if(localStorage.getItem('degradation')){
-    degradationLevel=parseInt(localStorage.getItem('degradation'));
-    document.body.className=`degraded-${degradationLevel}`;
+// ---------- procedural scrap generator
+const wall=document.getElementById('wall');
+const lorem=['▓▓█░ ░▓██','██▓░ ▓▓░█','░██▓ █░▓█','▓░██ ░▓▓█',
+             'ENTROPIC PARAPRAXIS','NERE JACK','42 SCRATCH ACID','MOON WORSHIP'];
+const masks=['url("data:image/svg+xml;utf8,\
+<svg xmlns=\'http://www.w3.org/2000/svg\' width=\'200\' height=\'120\'><path d=\'M0 20 L15 0 H185 L200 20 V100 L185 120 H15 L0 100 Z\' fill=\'white\'/></svg>")',
+             'url("data:image/svg+xml;utf8,\
+<svg xmlns=\'http://www.w3.org/2000/svg\' width=\'200\' height=\'120\'><path d=\'M0 0 H200 V90 L180 120 H20 L0 90 Z\' fill=\'white\'/></svg>")'];
+for(let i=0;i<20;i++){
+   const s=document.createElement('div');
+   s.className='scrap';
+   s.style.setProperty('--rot',`${-8+Math.random()*16}deg`);
+   s.style.setProperty('--trot',`${-6+Math.random()*12}deg`);
+   s.style.setProperty('--mask',masks[Math.floor(Math.random()*masks.length)]);
+   s.style.left=`${Math.random()*90}%`;
+   s.style.top=`${Math.random()*90}%`;
+   s.innerHTML=`<strong>${lorem[Math.floor(Math.random()*lorem.length)]}</strong><br>${(1+Math.floor(Math.random()*12)).toString().padStart(2,'0')}/${(1+Math.floor(Math.random()*28)).toString().padStart(2,'0')} · 8:00PM`;
+   wall.appendChild(s);
 }
-addEventListener('beforeunload',()=>localStorage.setItem('degradation',degradationLevel));
 
-// Anti‑smooth scroll jitter
-let st;addEventListener('scroll',()=>{
-    clearTimeout(st);
-    document.body.style.transform=`translateX(${Math.random()*4-2}px)`;
-    st=setTimeout(()=>document.body.style.transform='translateX(0)',50);
-});
-
-// Resize
-addEventListener('resize',()=>{sizeCanvas();generateArtifacts();});
+// ---------- xerox WebGL shader (halftone + scan jitter) – minimal lib‑less
+const gl=(()=>{
+ const c=document.getElementById('xeroxShader');
+ c.width=innerWidth;c.height=innerHeight;
+ addEventListener('resize',()=>{c.width=innerWidth;c.height=innerHeight});
+ return c.getContext('webgl');
+})();
+const vs=`attribute vec2 p;void main(){gl_Position=vec4(p,0.,1.);}`,
+fs=`
+precision highp float;
+uniform vec2 res;uniform float t;uniform float d;
+float rand(vec2 co){return fract(sin(dot(co,vec2(12.9898,78.233)))*43758.5453);}
+void main(){
+ vec2 uv=gl_FragCoord.xy/res;
+ /* scanline wobble */
+ uv.y+=sin(uv.x*80.0+t*4.0)*0.002*d;
+ /* halftone dots */
+ vec2 grid=uv*vec2(400.0,400.0);
+ vec2 gv=fract(grid)-0.5;
+ float mask=step(length(gv),0.3);
+ float noise=rand(gl_FragCoord.xy+t)*0.15;
+ vec3 col=mix(vec3(0.0),vec3(1.0),mask-noise);
+ gl_FragColor=vec4(col,0.12);
+}`;
+function compile(src,type){const s=gl.createShader(type);gl.shaderSource(s,src);gl.compileShader(s);return s}
+const prog=gl.createProgram();
+gl.attachShader(prog,compile(vs,gl.VERTEX_SHADER));
+gl.attachShader(prog,compile(fs,gl.FRAGMENT_SHADER));
+gl.linkProgram(prog);gl.useProgram(prog);
+const buf=gl.createBuffer();gl.bindBuffer(gl.ARRAY_BUFFER,buf);
+gl.bufferData(gl.ARRAY_BUFFER,new Float32Array([-1,-1,1,-1,-1,1,1,1]),gl.STATIC_DRAW);
+const loc=gl.getAttribLocation(prog,'p');gl.enableVertexAttribArray(loc);
+gl.vertexAttribPointer(loc,2,gl.FLOAT,false,0,0);
+const resLoc=gl.getUniformLocation(prog,'res'),
+      tLoc=gl.getUniformLocation(prog,'t'),
+      dLoc=gl.getUniformLocation(prog,'d');
+let time=0;
+function draw(){
+  time+=.016;
+  gl.uniform2f(resLoc,innerWidth,innerHeight);
+  gl.uniform1f(tLoc,time);
+  gl.uniform1f(dLoc,parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--decay')));
+  gl.drawArrays(gl.TRIANGLE_STRIP,0,4);
+  requestAnimationFrame(draw);
+}draw();
 </script>
 </body>
 </html>
-```
